--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Video attachment and management for your Eloquent models.",
     "require": {
         "php": ">=5.5.9",
-        "draperstudio/laravel-service-provider": "~1.0",
-        "graham-campbell/flysystem": "~3.3"
+        "draperstudio/laravel-service-provider": "^1.0",
+        "graham-campbell/flysystem": "^3.3"
     },
     "autoload": {
         "psr-4": {
