--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,53 @@
 {
     "name": "draperstudio/laravel-vidible",
+    "type": "library",
     "description": "Video attachment and management for your Eloquent models.",
+    "keywords": [
+        "draperstudio",
+        "laravel-vidible"
+    ],
+    "homepage": "https://github.com/DraperStudio/laravel-vidible",
+    "license": "MIT",
+    "authors": [{
+        "name": "DraperStudio",
+        "email": "hello@draperstudio.tech",
+        "homepage": "http://draperstudio.tech",
+        "role": "Developer"
+    }],
     "require": {
-        "php": ">=5.5.9",
-        "draperstudio/laravel-service-provider": "^1.0",
-        "graham-campbell/flysystem": "^3.3"
+        "php": "^5.6 || ^7.0",
+        "draperstudio/laravel-service-provider": "^0.1",
+        "graham-campbell/flysystem": "^3.3",
+        "php-ffmpeg/php-ffmpeg": "^0.6"
+    },
+    "require-dev": {
+        "graham-campbell/testbench": "^3.1",
+        "mockery/mockery": "^0.9.4",
+        "phpunit/phpunit": "^5.0",
+        "scrutinizer/ocular": "~1.1",
+        "squizlabs/php_codesniffer": "~2.3"
     },
     "autoload": {
         "psr-4": {
             "DraperStudio\\Vidible\\": "src/"
         }
-    }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "DraperStudio\\Tests\\Vidible\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "phpunit"
+    },
+    "config": {
+        "preferred-install": "dist"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
