--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,7 @@
 {
     "name": "faustbrian/laravel-vidible",
     "description": "Video attachment and management for your Eloquent models.",
-    "keywords": [
-        "laravel",
-        "framework",
-        "Laravel-vidible",
-        "Laravel Vidible",
-        "Brian Faust",
-        "faustbrian"
-    ],
+    "keywords": ["laravel", "framework", "Laravel-vidible", "Laravel Vidible", "Brian Faust", "faustbrian"],
     "license": "MIT",
     "authors": [{
         "name": "Brian Faust",
@@ -17,17 +10,15 @@
         "role": "Developer"
     }],
     "require": {
-        "php": "^5.6 || ^7.0",
+        "php": "^5.6.4 || ^7.0",
         "faustbrian/laravel-service-provider": "^1.0",
         "graham-campbell/flysystem": "^3.3",
         "php-ffmpeg/php-ffmpeg": "^0.6"
     },
     "require-dev": {
-        "graham-campbell/testbench": "^3.1",
-        "mockery/mockery": "^0.9.4",
-        "phpunit/phpunit": "^5.0",
-        "scrutinizer/ocular": "~1.1",
-        "squizlabs/php_codesniffer": "~2.3"
+        "graham-campbell/testbench": "^3.2",
+        "mockery/mockery": "^0.9.5",
+        "phpunit/phpunit": "^5.6"
     },
     "autoload": {
         "psr-4": {
