--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,10 @@
     "authors": [{
         "name": "Brian Faust",
         "email": "hello@brianfaust.de",
-        "homepage": "https://brianfaust.de",
-        "role": "Developer"
+        "homepage": "https://brianfaust.de"
     }],
     "require": {
-        "php": "^5.6.4 || ^7.0",
+        "php": "^7.0",
         "faustbrian/laravel-service-provider": "^1.0",
         "graham-campbell/flysystem": "^3.3",
         "php-ffmpeg/php-ffmpeg": "^0.6"
