--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "5.5.* || 5.6.*",
+        "illuminate/support": "5.5.* || 5.6.* || 5.7.*",
         "graham-campbell/flysystem": "^4.1",
         "php-ffmpeg/php-ffmpeg": "^0.11"
     },
