--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "Laravel-vidible",
         "Laravel Vidible"
     ],
-    "license": "MIT",
+    "license": "MPL-2.0",
     "authors": [
         {
             "name": "Brian Faust",
