--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,14 @@
         "Laravel Vidible"
     ],
     "license": "MPL-2.0",
-    "authors": [
-        {
-            "name": "Brian Faust",
-            "email": "hello@basecode.sh",
-            "homepage": "https://basecode.sh"
-        }
-    ],
+    "authors": [{
+        "name": "Brian Faust",
+        "email": "hello@basecode.sh",
+        "homepage": "https://basecode.sh"
+    }],
     "require": {
         "php": "^7.2",
-        "illuminate/support": "^5.8",
+        "illuminate/support": "^5.8|^6.0",
         "graham-campbell/flysystem": "^4.1",
         "php-ffmpeg/php-ffmpeg": "^0.11"
     },
